# job-tracker

./: .gitignore  README.md  demo.py  langgraph.json  pyproject.toml  test_supervisor.py
agent/: graph.py  schemas.py  state.py
agent/nodes/: application_agent.py  classifier_agent.py
agent/prompts/: application_manager_prompt.py  classifier_prompt.py
backend/: main.py
backend/core/: main.py
backend/db/: db.py  tokens.py
backend/models/: token.py  users.py
backend/routers/: auth.py  users.py
