[project]
name = "job-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "auth0-fastapi-api>=1.0.0b3",
    "authlib>=1.6.1",
    "fastapi>=0.115.14",
    "langchain-tavily>=0.2.11",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.3",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-supervisor>=0.0.29",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt[crypto]>=2.10.1",
    "ruff>=0.12.7",
    "uvicorn[standard]>=0.34.3",
]
